<resources>
    <string name="app_name">Interval Ear Training</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="unison">Unison</string>
    <string name="minor2">Minor 2nd</string>
    <string name="major2">Major 2nd</string>
    <string name="minor3">Minor 3rd</string>
    <string name="major3">Major 3rd</string>
    <string name="perfect4">Perfect 4th</string>
    <string name="tritone">Tritone</string>
    <string name="perfect5">Perfect 5th</string>
    <string name="minor6">Minor 6th</string>
    <string name="major6">Major 6th</string>
    <string name="minor7">Minor 7th</string>
    <string name="major7">Major 7th</string>
    <string name="octave">Octave</string>
    <string name="revealAns">Reveal Answer</string>
    <string name="mainMenu">Main</string>

    <string name="button_1">Start</string>
    <string name="button_2">Practice</string>
    <string name="button_3">Song List</string>
    <string name="button_4">Song References</string>
    <string name="level_button">Change Difficulty</string>

    <string name="jaws"> - Jaws</string>
    <string name="silent"> - Silent Night</string>
    <string name="saints"> - Oh, when the Saints</string>
    <string name="wedding"> - Wedding march</string>
    <string name="simpsons"> - Simpsons Theme</string>
    <string name="star_wars"> - Star Wars</string>
    <string name="my_life"> - In My Life</string>
    <string name="my_way"> - My Way</string>
    <string name="star_trek"> - Star Trek Theme</string>
    <string name="rainbow"> - Somewhere over &#xA; the Rainbow</string>
    <string name="title_activity_song">SongActivity</string>
</resources>